SubVersion: $Id$

Log of changes:	

- 07/02/2006, version 0.06 (0.0.4, 0.0.6, 0.0.4): roms
	- updated manpage according to bug #1397587
	- varnames with greek characters are now saved fine
	- fixed bug #1430307: "full path on cmd line"
	- removed 'exit home dir' limitation/security
	- ungroup TI82/85 files when option is set to 'single'

- 03/02/2006, version 0.05 (0.0.4, 0.0.6, 0.0.4): roms
	- tifiles2 library has switched to 'glib filename encoding'
	- fixed missing or bad utf8/glib conversions
	- added TiGroup support (sending only =  read only)

- 30/01/2006, version 0.04 (0.0.4, 0.0.5, 0.0.4): roms
	- reverted tifiles to locale encoding
	- checked/fixed tilp for use of the good filename encoding

- 21/01/2006, version 0.03 (0.0.4, 0.0.5, 0.0.4): roms
	- fixed a bug in the TiLP error management system
	- cable probe: use first cable instead of the last one. Anywais, this box should display a list so that user can choose cable & calc.

- 15/09/2005, version 0.02 (0.0.3, 0.0.3, 0.0.3): roms
	- updated autotools scripts (tijl)
	- imported gettext 0.14.5 (tijl)
	- enabled i18n (tijl)
	- fixed glade errors by linking tilp with -export-dynamic (tijl)
	- fixed MinGW compilation issues but the -lcomdlg32 issue still need to be fixed.

- 09/06/2005, version 0.01 (0.0.1, 0.0.1, 0.0.1): roms
	Use new TiLP-II framework (libti*2)

=============[ TiLP II starts here ]==============

- 26/05/2005, version 6.79 (3.9.2, 0.6.5, 4.5.9): jb
	Images in EPS/PDF files now compressed if zlib is available and
	ASCII85-encoded.
	Updated version in configure.ac to 6.79.

- 24/05/2005, version 6.79 (3.9.2, 0.6.4, 4.5.9): jb
	Added PDF/EPS image support for screenshots.

- 28/02/2005, version 6.78 (3.8.8, 0.6.2, 4.5.7): roms
	Fixed creation of /usr/lib/tilp directory.
	Fixed 'Help->User's manual item'.
	ROM dump for TI83+/84+ SilverEdition is now complete but may not work.
	Improved go_to_bookmark.
	Updated obsoleted bookmarks.

- 29/01/2005, version 6.77 (3.8.7, 0.6.1, 4.5.6): roms