@@ -1,6 +1,5 @@
 This is a list of some things to do:
 
-- rewrite target folder when sending to a specific folder
 - skip/retry button
 
 - suggestions of 	"Travis Evans" <travisgevans@earthlink.net>:
