@@ -424,7 +424,8 @@ If you have selected one or more variables, </font><font size="3">they
 will be saved one by one (if </font><font size="3"><span
  style="font-style: italic;">Recv as group</span></font><font size="3">
 is unchecked) or grouped into a single file (if <span
- style="font-style: italic;">Recv as group</span> is).</font>
+ style="font-style: italic;">Recv as group</span> is).<br>
+</font>
 <p> </p>
 <font size="3">2&deg;) The computer frame lists the files in
 your current folder like displayed at the bottom. You can change folder
@@ -438,6 +439,10 @@ can change the working drive (Windows) with the local popup menu.</font><font
 You can send to hand-helds variables, applications or operating
 systems. Simply select one or more files (variables or
 FLASH applications only; no backup) and drag them onto the remote view.<br>
+<br>
+</font><font size="3"><span style="font-style: italic;">Note:</span><br>
+- if you drag to a folder, variables will be sent to this folder,<br>
+- if you drag to 'Variables', variables will be sent to default folder.<br>
 </font>
 <h3><font size="3"><big>5.4.2 Simplfified GUI mode</big><br>
 </font></h3>
