@@ -39,6 +39,7 @@ void tilp_clist_selection_display(void);
 
 void tilp_slct_load_contents(void);
 void tilp_slct_unload_contents(void);
+void tilp_slct_change_folder(const char *target);
 
 void tilp_add_file_to_selection(const char *filename);
 void tilp_clist_add_file_to_selection(const char* filename);
