@@ -8,6 +8,7 @@ Log of changes:
 	- fixed bug #1430307: "full path on cmd line"
 	- removed 'exit home dir' limitation/security
 	- ungroup TI82/85 files when option is set to 'single'
+	- rewrite target folder when sending to a specific folder
 
 - 03/02/2006, version 0.05 (0.0.4, 0.0.6, 0.0.4): roms
 	- tifiles2 library has switched to 'glib filename encoding'
